@@ -1,6 +1,5 @@
 package org.jabref.gui.mergeentries;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
@@ -10,14 +9,16 @@ import java.util.TreeSet;
 import javax.swing.undo.UndoManager;
 
 import org.jabref.gui.DialogService;
+import org.jabref.gui.StateManager;
+import org.jabref.gui.mergeentries.threewaymerge.EntriesMergeResult;
+import org.jabref.gui.mergeentries.threewaymerge.MergeEntriesDialog;
 import org.jabref.gui.preferences.GuiPreferences;
-import org.jabref.gui.undo.NamedCompound;
+import org.jabref.gui.undo.NamedCompoundEdit;
 import org.jabref.gui.undo.UndoableChangeType;
 import org.jabref.gui.undo.UndoableFieldChange;
 import org.jabref.logic.importer.EntryBasedFetcher;
 import org.jabref.logic.importer.FetcherClientException;
 import org.jabref.logic.importer.FetcherServerException;
-import org.jabref.logic.importer.IdBasedFetcher;
 import org.jabref.logic.importer.ImportCleanup;
 import org.jabref.logic.importer.WebFetcher;
 import org.jabref.logic.importer.WebFetchers;
@@ -28,23 +29,30 @@ import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.Field;
 import org.jabref.model.entry.field.FieldFactory;
+import org.jabref.model.entry.field.FieldTextMapper;
 import org.jabref.model.entry.field.StandardField;
 import org.jabref.model.entry.types.EntryType;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Class for fetching and merging bibliographic information
- */
+/// Class for fetching and merging bibliographic information
 public class FetchAndMergeEntry {
 
-    // All identifiers listed here should also appear at {@link org.jabref.logic.importer.CompositeIdFetcher#performSearchById}
-    public static List<Field> SUPPORTED_FIELDS = Arrays.asList(StandardField.DOI, StandardField.EPRINT, StandardField.ISBN);
+    // All identifiers listed here should also appear at {@link org.jabref.logic.importer.WebFetchers#getIdBasedFetcherFoIdentifier}
+    public static List<Field> SUPPORTED_FIELDS =
+            List.of(
+                    StandardField.EPRINT, // arXiv
+                    StandardField.DOI,
+                    StandardField.ISBN,
+                    StandardField.ISSN
+            );
 
     private static final Logger LOGGER = LoggerFactory.getLogger(FetchAndMergeEntry.class);
+
     private final DialogService dialogService;
     private final UndoManager undoManager;
+    private final StateManager stateManager;
     private final BibDatabaseContext bibDatabaseContext;
     private final TaskExecutor taskExecutor;
     private final GuiPreferences preferences;
@@ -53,12 +61,14 @@ public class FetchAndMergeEntry {
                               TaskExecutor taskExecutor,
                               GuiPreferences preferences,
                               DialogService dialogService,
-                              UndoManager undoManager) {
+                              UndoManager undoManager,
+                              StateManager stateManager) {
         this.bibDatabaseContext = bibDatabaseContext;
         this.taskExecutor = taskExecutor;
         this.preferences = preferences;
         this.dialogService = dialogService;
         this.undoManager = undoManager;
+        this.stateManager = stateManager;
     }
 
     public void fetchAndMerge(BibEntry entry) {
@@ -73,44 +83,46 @@ public class FetchAndMergeEntry {
         for (Field field : fields) {
             Optional<String> fieldContent = entry.getField(field);
             if (fieldContent.isPresent()) {
-                Optional<IdBasedFetcher> fetcher = WebFetchers.getIdBasedFetcherForField(field, preferences.getImportFormatPreferences());
-                fetcher.ifPresent(idBasedFetcher -> BackgroundTask.wrap(() -> idBasedFetcher.performSearchById(fieldContent.get()))
-                                                                  .onSuccess(fetchedEntry -> {
-                                                                      ImportCleanup cleanup = ImportCleanup.targeting(bibDatabaseContext.getMode(), preferences.getFieldPreferences());
-                                                                      String type = field.getDisplayName();
-                                                                      if (fetchedEntry.isPresent()) {
-                                                                          cleanup.doPostCleanup(fetchedEntry.get());
-                                                                          showMergeDialog(entry, fetchedEntry.get(), idBasedFetcher);
-                                                                      } else {
-                                                                          dialogService.notify(Localization.lang("Cannot get info based on given %0: %1", type, fieldContent.get()));
-                                                                      }
-                                                                  })
-                                                                  .onFailure(exception -> {
-                                                                      LOGGER.error("Error while fetching bibliographic information", exception);
-                                                                      if (exception instanceof FetcherClientException) {
-                                                                          dialogService.showInformationDialogAndWait(Localization.lang("Fetching information using %0", idBasedFetcher.getName()), Localization.lang("No data was found for the identifier"));
-                                                                      } else if (exception instanceof FetcherServerException) {
-                                                                          dialogService.showInformationDialogAndWait(Localization.lang("Fetching information using %0", idBasedFetcher.getName()), Localization.lang("Server not available"));
-                                                                      } else {
-                                                                          dialogService.showInformationDialogAndWait(Localization.lang("Fetching information using %0", idBasedFetcher.getName()), Localization.lang("Error occurred %0", exception.getMessage()));
-                                                                      }
-                                                                  })
-                                                                  .executeWith(taskExecutor));
+                WebFetchers.getIdBasedFetcherForField(field, preferences.getImportFormatPreferences())
+                           .ifPresentOrElse(idBasedFetcher ->
+                                           BackgroundTask.wrap(() -> idBasedFetcher.performSearchById(fieldContent.get()))
+                                                         .onSuccess(fetchedEntry -> {
+                                                             ImportCleanup cleanup = ImportCleanup.targeting(bibDatabaseContext.getMode(), preferences.getFieldPreferences());
+                                                             if (fetchedEntry.isPresent()) {
+                                                                 cleanup.doPostCleanup(fetchedEntry.get());
+                                                                 showMergeDialog(entry, fetchedEntry.get(), idBasedFetcher);
+                                                             } else {
+                                                                 dialogService.notify(Localization.lang("Cannot get info based on given %0: %1", FieldTextMapper.getDisplayName(field), fieldContent.get()));
+                                                             }
+                                                         })
+                                                         .onFailure(exception -> {
+                                                             LOGGER.error("Error while fetching bibliographic information", exception);
+                                                             if (exception instanceof FetcherClientException) {
+                                                                 dialogService.notify(Localization.lang("No data was found for the identifier"));
+                                                             } else if (exception instanceof FetcherServerException) {
+                                                                 dialogService.notify(Localization.lang("Server not available"));
+                                                             } else {
+                                                                 dialogService.notify(Localization.lang("Error while fetching from %0", idBasedFetcher.getName()));
+                                                             }
+                                                         })
+                                                         .executeWith(taskExecutor),
+                                   () -> LOGGER.warn("No fetcher available for '{}'", FieldTextMapper.getDisplayName(field)));
             } else {
-                dialogService.notify(Localization.lang("No %0 found", field.getDisplayName()));
+                dialogService.notify(Localization.lang("No %0 found", FieldTextMapper.getDisplayName(field)));
             }
         }
     }
 
     private void showMergeDialog(BibEntry originalEntry, BibEntry fetchedEntry, WebFetcher fetcher) {
-        MergeEntriesDialog dialog = new MergeEntriesDialog(originalEntry, fetchedEntry, preferences);
+        MergeEntriesDialog dialog = new MergeEntriesDialog(originalEntry, fetchedEntry, preferences, stateManager);
         dialog.setTitle(Localization.lang("Merge entry with %0 information", fetcher.getName()));
         dialog.setLeftHeaderText(Localization.lang("Original entry"));
         dialog.setRightHeaderText(Localization.lang("Entry from %0", fetcher.getName()));
+        dialog.autoSelectBetterFields();
         Optional<BibEntry> mergedEntry = dialogService.showCustomDialogAndWait(dialog).map(EntriesMergeResult::mergedEntry);
 
         if (mergedEntry.isPresent()) {
-            NamedCompound ce = new NamedCompound(Localization.lang("Merge entry with %0 information", fetcher.getName()));
+            NamedCompoundEdit compoundEdit = new NamedCompoundEdit(Localization.lang("Merge entry with %0 information", fetcher.getName()));
 
             // Updated the original entry with the new fields
             Set<Field> jointFields = new TreeSet<>(Comparator.comparing(Field::getName));
@@ -125,7 +137,7 @@ public class FetchAndMergeEntry {
 
             if (!oldType.equals(newType)) {
                 originalEntry.setType(newType);
-                ce.addEdit(new UndoableChangeType(originalEntry, oldType, newType));
+                compoundEdit.addEdit(new UndoableChangeType(originalEntry, oldType, newType));
                 edited = true;
             }
 
@@ -135,7 +147,7 @@ public class FetchAndMergeEntry {
                 Optional<String> mergedString = mergedEntry.get().getField(field);
                 if (originalString.isEmpty() || !originalString.equals(mergedString)) {
                     originalEntry.setField(field, mergedString.get()); // mergedString always present
-                    ce.addEdit(new UndoableFieldChange(originalEntry, field, originalString.orElse(null),
+                    compoundEdit.addEdit(new UndoableFieldChange(originalEntry, field, originalString.orElse(null),
                             mergedString.get()));
                     edited = true;
                 }
@@ -146,14 +158,14 @@ public class FetchAndMergeEntry {
                 if (!jointFields.contains(field) && !FieldFactory.isInternalField(field)) {
                     Optional<String> originalString = originalEntry.getField(field);
                     originalEntry.clearField(field);
-                    ce.addEdit(new UndoableFieldChange(originalEntry, field, originalString.get(), null)); // originalString always present
+                    compoundEdit.addEdit(new UndoableFieldChange(originalEntry, field, originalString.get(), null)); // originalString always present
                     edited = true;
                 }
             }
 
             if (edited) {
-                ce.end();
-                undoManager.addEdit(ce);
+                compoundEdit.end();
+                undoManager.addEdit(compoundEdit);
                 dialogService.notify(Localization.lang("Updated entry with info from %0", fetcher.getName()));
             } else {
                 dialogService.notify(Localization.lang("No information added"));
@@ -176,7 +188,7 @@ public class FetchAndMergeEntry {
                       })
                       .onFailure(exception -> {
                           LOGGER.error("Error while fetching entry with {} ", fetcher.getName(), exception);
-                          dialogService.showErrorDialogAndWait(Localization.lang("Error while fetching from %0", fetcher.getName()), exception);
+                          dialogService.notify(Localization.lang("Error while fetching from %0", fetcher.getName()));
                       })
                       .executeWith(taskExecutor);
     }
