@@ -19,6 +19,7 @@ import org.jabref.logic.importer.ImporterPreferences;
 
 public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
 
+    private final BooleanProperty transliterateFieldsForCitationKeyProperty = new SimpleBooleanProperty();
     private final BooleanProperty overwriteAllowProperty = new SimpleBooleanProperty();
     private final BooleanProperty overwriteWarningProperty = new SimpleBooleanProperty();
     private final BooleanProperty generateOnSaveProperty = new SimpleBooleanProperty();
@@ -38,12 +39,10 @@ public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
 
     private final CitationKeyPatternPreferences keyPatternPreferences;
 
-    /**
-     * The preference for whether to use the key generator on import is different from how it is configured.
-     * In the UI, there is no better place to put the option than the Citation Key Generator tab.
-     * However, shifting the preference to {@link CitationKeyPatternPreferences} would break the abstraction or hierarchy.
-     * Hence, we keep the preference in {@link ImporterPreferences}, but for the UI, we initialize it here.
-     */
+    /// The preference for whether to use the key generator on import is different from how it is configured.
+    /// In the UI, there is no better place to put the option than the Citation Key Generator tab.
+    /// However, shifting the preference to {@link CitationKeyPatternPreferences} would break the abstraction or hierarchy.
+    /// Hence, we keep the preference in {@link ImporterPreferences}, but for the UI, we initialize it here.
     private final ImporterPreferences importerPreferences;
 
     public CitationKeyPatternTabViewModel(CitationKeyPatternPreferences keyPatternPreferences, ImporterPreferences importerPreferences) {
@@ -53,6 +52,7 @@ public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
 
     @Override
     public void setValues() {
+        transliterateFieldsForCitationKeyProperty.setValue(keyPatternPreferences.shouldTransliterateFieldsForCitationKey());
         overwriteAllowProperty.setValue(!keyPatternPreferences.shouldAvoidOverwriteCiteKey());
         overwriteWarningProperty.setValue(keyPatternPreferences.shouldWarnBeforeOverwriteCiteKey());
         generateOnSaveProperty.setValue(keyPatternPreferences.shouldGenerateCiteKeysBeforeSaving());
@@ -86,13 +86,13 @@ public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
         patternListProperty.forEach(item -> {
             String patternString = item.getPattern();
             if (!"default".equals(item.getEntryType().getName())) {
-                if (!patternString.trim().isEmpty()) {
+                if (!patternString.isBlank()) {
                     newKeyPattern.addCitationKeyPattern(item.getEntryType(), patternString);
                 }
             }
         });
 
-        if (!defaultKeyPatternProperty.getValue().getPattern().trim().isEmpty()) {
+        if (!defaultKeyPatternProperty.getValue().getPattern().isBlank()) {
             // we do not trim the value at the assignment to enable users to have spaces at the beginning and
             // at the end of the pattern
             newKeyPattern.setDefaultValue(defaultKeyPatternProperty.getValue().getPattern());
@@ -106,6 +106,7 @@ public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
             keySuffix = CitationKeyPatternPreferences.KeySuffix.SECOND_WITH_B;
         }
 
+        keyPatternPreferences.setShouldTransliterateFieldsForCitationKey(transliterateFieldsForCitationKeyProperty.getValue());
         keyPatternPreferences.setAvoidOverwriteCiteKey(!overwriteAllowProperty.getValue());
         keyPatternPreferences.setWarnBeforeOverwriteCiteKey(overwriteWarningProperty.getValue());
         keyPatternPreferences.setGenerateCiteKeysBeforeSaving(generateOnSaveProperty.getValue());
@@ -115,6 +116,10 @@ public class CitationKeyPatternTabViewModel implements PreferenceTabViewModel {
         keyPatternPreferences.setKeyPatternReplacement(keyPatternReplacementProperty.getValue());
         keyPatternPreferences.setUnwantedCharacters(unwantedCharactersProperty.getValue());
         keyPatternPreferences.setKeyPatterns(newKeyPattern);
+    }
+
+    public BooleanProperty transliterateFieldsForCitationKeyProperty() {
+        return transliterateFieldsForCitationKeyProperty;
     }
 
     public BooleanProperty overwriteAllowProperty() {
