@@ -1,8 +1,12 @@
 package org.jabref.gui.preferences.websearch;
 
-import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.util.Optional;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.concurrent.Callable;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 import javafx.beans.property.BooleanProperty;
@@ -19,33 +23,31 @@ import javafx.beans.property.StringProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 
-import org.jabref.gui.DialogService;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
-import org.jabref.gui.slr.StudyCatalogItem;
 import org.jabref.logic.FilePreferences;
 import org.jabref.logic.LibraryPreferences;
 import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ImporterPreferences;
 import org.jabref.logic.importer.SearchBasedFetcher;
+import org.jabref.logic.importer.WebFetcher;
 import org.jabref.logic.importer.WebFetchers;
 import org.jabref.logic.importer.fetcher.CompositeSearchBasedFetcher;
 import org.jabref.logic.importer.fetcher.CustomizableKeyFetcher;
 import org.jabref.logic.importer.plaincitation.PlainCitationParserChoice;
 import org.jabref.logic.importer.util.GrobidPreferences;
 import org.jabref.logic.l10n.Localization;
-import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.os.OS;
 import org.jabref.logic.preferences.CliPreferences;
 import org.jabref.logic.preferences.DOIPreferences;
 import org.jabref.logic.preferences.FetcherApiKey;
-
-import kong.unirest.core.UnirestException;
+import org.jabref.logic.util.BackgroundTask;
+import org.jabref.logic.util.TaskExecutor;
 
 public class WebSearchTabViewModel implements PreferenceTabViewModel {
     private final BooleanProperty enableWebSearchProperty = new SimpleBooleanProperty();
     private final BooleanProperty warnAboutDuplicatesOnImportProperty = new SimpleBooleanProperty();
     private final BooleanProperty shouldDownloadLinkedOnlineFiles = new SimpleBooleanProperty();
-    private final BooleanProperty shouldkeepDownloadUrl = new SimpleBooleanProperty();
+    private final BooleanProperty shouldKeepDownloadUrl = new SimpleBooleanProperty();
 
     private final ListProperty<PlainCitationParserChoice> plainCitationParsers =
             new SimpleListProperty<>(FXCollections.observableArrayList(PlainCitationParserChoice.values()));
@@ -59,47 +61,46 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
     private final BooleanProperty useCustomDOIProperty = new SimpleBooleanProperty();
     private final StringProperty useCustomDOINameProperty = new SimpleStringProperty("");
 
-    private final ObservableList<StudyCatalogItem> catalogs = FXCollections.observableArrayList();
+    private final ObservableList<FetcherViewModel> fetchers = FXCollections.observableArrayList();
     private final BooleanProperty grobidEnabledProperty = new SimpleBooleanProperty();
     private final StringProperty grobidURLProperty = new SimpleStringProperty("");
 
-    private final ObservableList<FetcherApiKey> apiKeys = FXCollections.observableArrayList();
-    private final ObjectProperty<FetcherApiKey> selectedApiKeyProperty = new SimpleObjectProperty<>();
     private final BooleanProperty apikeyPersistProperty = new SimpleBooleanProperty();
     private final BooleanProperty apikeyPersistAvailableProperty = new SimpleBooleanProperty();
 
-    private final DialogService dialogService;
-    private final CliPreferences preferences;
+    private final ObservableList<SearchEngineItem> searchEngines = FXCollections.observableArrayList();
+
     private final DOIPreferences doiPreferences;
     private final GrobidPreferences grobidPreferences;
     private final ImporterPreferences importerPreferences;
     private final FilePreferences filePreferences;
     private final ImportFormatPreferences importFormatPreferences;
     private final LibraryPreferences libraryPreferences;
+    private final TaskExecutor taskExecutor;
 
     private final ReadOnlyBooleanProperty refAiEnabled;
 
-    public WebSearchTabViewModel(CliPreferences preferences, DialogService dialogService, ReadOnlyBooleanProperty refAiEnabled) {
-        this.dialogService = dialogService;
-        this.preferences = preferences;
+    public WebSearchTabViewModel(CliPreferences preferences, ReadOnlyBooleanProperty refAiEnabled, TaskExecutor taskExecutor) {
         this.importerPreferences = preferences.getImporterPreferences();
         this.grobidPreferences = preferences.getGrobidPreferences();
         this.doiPreferences = preferences.getDOIPreferences();
         this.filePreferences = preferences.getFilePreferences();
         this.importFormatPreferences = preferences.getImportFormatPreferences();
         this.libraryPreferences = preferences.getLibraryPreferences();
+        this.taskExecutor = taskExecutor;
 
         this.refAiEnabled = refAiEnabled;
 
-        setupPlainCitationParsers(preferences);
+        setupPlainCitationParsers();
+        setupSearchEngines();
     }
 
-    private void setupPlainCitationParsers(CliPreferences preferences) {
+    private void setupPlainCitationParsers() {
         if (!refAiEnabled.get()) {
             plainCitationParsers.remove(PlainCitationParserChoice.LLM);
         }
 
-        refAiEnabled.addListener((observable, oldValue, newValue) -> {
+        refAiEnabled.addListener((_, _, newValue) -> {
             if (newValue) {
                 plainCitationParsers.add(PlainCitationParserChoice.LLM);
             } else {
@@ -117,7 +118,7 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
             plainCitationParsers.remove(PlainCitationParserChoice.GROBID);
         }
 
-        grobidEnabledProperty.addListener((observable, oldValue, newValue) -> {
+        grobidEnabledProperty.addListener((_, _, newValue) -> {
             if (newValue) {
                 plainCitationParsers.add(PlainCitationParserChoice.GROBID);
             } else {
@@ -132,38 +133,91 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
         });
     }
 
+    private void setupSearchEngines() {
+        // add default search engines
+        searchEngines.addAll(
+                new SearchEngineItem("Google Scholar", "https://scholar.google.com/scholar?q={title}"),
+                new SearchEngineItem("Semantic Scholar", "https://www.semanticscholar.org/search?q={title}"),
+                new SearchEngineItem("Short Science", "https://www.shortscience.org/internalsearch?q={title}")
+        );
+    }
+
     @Override
     public void setValues() {
         enableWebSearchProperty.setValue(importerPreferences.areImporterEnabled());
         warnAboutDuplicatesOnImportProperty.setValue(importerPreferences.shouldWarnAboutDuplicatesOnImport());
         shouldDownloadLinkedOnlineFiles.setValue(filePreferences.shouldDownloadLinkedFiles());
-        shouldkeepDownloadUrl.setValue(filePreferences.shouldKeepDownloadUrl());
-        addImportedEntries.setValue(libraryPreferences.isAddImportedEntriesEnabled());
+        shouldKeepDownloadUrl.setValue(filePreferences.shouldKeepDownloadUrl());
+        addImportedEntries.setValue(libraryPreferences.shouldAddImportedEntries());
         addImportedEntriesGroupName.setValue(libraryPreferences.getAddImportedEntriesGroupName());
         defaultPlainCitationParser.setValue(importerPreferences.getDefaultPlainCitationParser());
         citationsRelationStoreTTL.setValue(importerPreferences.getCitationsRelationsStoreTTL());
 
-        useCustomDOIProperty.setValue(doiPreferences.isUseCustom());
+        useCustomDOIProperty.setValue(doiPreferences.shouldUseCustom());
         useCustomDOINameProperty.setValue(doiPreferences.getDefaultBaseURI());
 
         grobidEnabledProperty.setValue(grobidPreferences.isGrobidEnabled());
         grobidURLProperty.setValue(grobidPreferences.getGrobidURL());
 
-        apiKeys.setAll(preferences.getImporterPreferences().getApiKeys().stream()
-                                  .map(apiKey -> new FetcherApiKey(apiKey.getName(), apiKey.shouldUse(), apiKey.getKey()))
-                                  .toList());
+        Set<FetcherApiKey> savedApiKeys = importerPreferences.getApiKeys();
+        Set<String> enabledCatalogs = new HashSet<>(importerPreferences.getCatalogs());
+
+        List<SearchBasedFetcher> allFetchers = WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
+                                                          .stream()
+                                                          .sorted(Comparator.comparing(WebFetcher::getName))
+                                                          .toList();
+
+        // We need to use names, because [WebFetchers] creates new instances for the fetchers at each method - even if they are the same.
+        Set<String> customizableKeyFetcherNames = WebFetchers.getCustomizableKeyFetchers(importFormatPreferences, importerPreferences).stream().map(WebFetcher::getName).collect(Collectors.toSet());
+
+        fetchers.clear();
+        Set<String> addedFetcherNames = new HashSet<>();
+        for (SearchBasedFetcher fetcher : allFetchers) {
+            if (CompositeSearchBasedFetcher.FETCHER_NAME.equals(fetcher.getName())) {
+                continue;
+            }
+            boolean isEnabled = enabledCatalogs.contains(fetcher.getName());
+            boolean keyIsCustomizable = customizableKeyFetcherNames.contains(fetcher.getName());
+            FetcherViewModel fetcherViewModel = new FetcherViewModel(fetcher, isEnabled, keyIsCustomizable);
+            if (keyIsCustomizable) {
+                savedApiKeys.stream()
+                            .filter(apiKey -> apiKey.getName().equals(fetcher.getName()))
+                            .findFirst()
+                            .ifPresent(apiKey -> {
+                                fetcherViewModel.apiKeyProperty().set(apiKey.getKey());
+                                fetcherViewModel.useCustomApiKeyProperty().set(apiKey.shouldUse());
+                            });
+            }
+            fetchers.add(fetcherViewModel);
+            addedFetcherNames.add(fetcher.getName());
+        }
+
+        // TODO: Refactor this loop and the above into one common logic / Use WebFetcher common interface
+        // Add customizable key fetchers that are not search-based (for ex: fulltext-only fetchers like WileyFetcher are CustomizableKeyFetchers)
+        for (CustomizableKeyFetcher fetcher : WebFetchers.getCustomizableKeyFetchers(importFormatPreferences, importerPreferences)) {
+            if (addedFetcherNames.contains(fetcher.getName())) {
+                continue;
+            }
+            FetcherViewModel fetcherViewModel = new FetcherViewModel(fetcher, false, true);
+            savedApiKeys.stream()
+                        .filter(apiKey -> apiKey.getName().equals(fetcher.getName()))
+                        .findFirst()
+                        .ifPresent(apiKey -> {
+                            fetcherViewModel.apiKeyProperty().set(apiKey.getKey());
+                            fetcherViewModel.useCustomApiKeyProperty().set(apiKey.shouldUse());
+                        });
+            fetchers.add(fetcherViewModel);
+        }
 
         apikeyPersistAvailableProperty.setValue(OS.isKeyringAvailable());
-        apikeyPersistProperty.setValue(preferences.getImporterPreferences().shouldPersistCustomKeys());
-        catalogs.addAll(WebFetchers.getSearchBasedFetchers(importFormatPreferences, importerPreferences)
-                                   .stream()
-                                   .map(SearchBasedFetcher::getName)
-                                   .filter(name -> !CompositeSearchBasedFetcher.FETCHER_NAME.equals(name))
-                                   .map(name -> {
-                                       boolean enabled = importerPreferences.getCatalogs().contains(name);
-                                       return new StudyCatalogItem(name, enabled);
-                                   })
-                                   .toList());
+        apikeyPersistProperty.setValue(importerPreferences.shouldPersistCustomKeys());
+
+        // Load custom URL templates from preferences if they exist
+        Map<String, String> savedTemplates = importerPreferences.getSearchEngineUrlTemplates();
+        if (!savedTemplates.isEmpty()) {
+            searchEngines.clear();
+            savedTemplates.forEach((name, url) -> searchEngines.add(new SearchEngineItem(name, url)));
+        }
     }
 
     @Override
@@ -171,12 +225,12 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
         importerPreferences.setImporterEnabled(enableWebSearchProperty.getValue());
         importerPreferences.setWarnAboutDuplicatesOnImport(warnAboutDuplicatesOnImportProperty.getValue());
         filePreferences.setDownloadLinkedFiles(shouldDownloadLinkedOnlineFiles.getValue());
-        filePreferences.setKeepDownloadUrl(shouldkeepDownloadUrl.getValue());
+        filePreferences.setKeepDownloadUrl(shouldKeepDownloadUrl.getValue());
         libraryPreferences.setAddImportedEntries(addImportedEntries.getValue());
-        if (addImportedEntriesGroupName.getValue().isEmpty() || addImportedEntriesGroupName.getValue().startsWith(" ")) {
+        if (addImportedEntriesGroupName.getValue().isBlank()) {
             libraryPreferences.setAddImportedEntriesGroupName(Localization.lang("Imported entries"));
         } else {
-            libraryPreferences.setAddImportedEntriesGroupName(addImportedEntriesGroupName.getValue());
+            libraryPreferences.setAddImportedEntriesGroupName(addImportedEntriesGroupName.getValue().trim());
         }
         importerPreferences.setDefaultPlainCitationParser(defaultPlainCitationParser.getValue());
         importerPreferences.setCitationsRelationsStoreTTL(citationsRelationStoreTTL.getValue());
@@ -186,16 +240,31 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
         grobidPreferences.setGrobidURL(grobidURLProperty.getValue());
         doiPreferences.setUseCustom(useCustomDOIProperty.get());
         doiPreferences.setDefaultBaseURI(useCustomDOINameProperty.getValue().trim());
+
         importerPreferences.setCatalogs(
-                FXCollections.observableList(catalogs.stream()
-                                                     .filter(StudyCatalogItem::isEnabled)
-                                                     .map(StudyCatalogItem::getName)
-                                                     .collect(Collectors.toList())));
+                fetchers.stream()
+                        .filter(FetcherViewModel::isEnabled)
+                        .map(FetcherViewModel::getName)
+                        .toList());
+
+        List<FetcherApiKey> apiKeysToStore = fetchers.stream()
+                                                     .filter(FetcherViewModel::isCustomizable)
+                                                     .map(fetcherViewModel -> new FetcherApiKey(fetcherViewModel.getName(), fetcherViewModel.shouldUseCustomApiKey(), fetcherViewModel.getApiKey()))
+                                                     .toList();
+
         importerPreferences.setPersistCustomKeys(apikeyPersistProperty.get());
-        preferences.getImporterPreferences().getApiKeys().clear();
+        importerPreferences.getApiKeys().clear();
         if (apikeyPersistAvailableProperty.get()) {
-            preferences.getImporterPreferences().getApiKeys().addAll(apiKeys);
+            importerPreferences.getApiKeys().addAll(apiKeysToStore);
         }
+
+        // Save custom URL templates to preferences
+        Map<String, String> templates = searchEngines.stream()
+                                                     .collect(Collectors.toMap(
+                                                             SearchEngineItem::getName,
+                                                             SearchEngineItem::getUrlTemplate
+                                                     ));
+        importerPreferences.setSearchEngineUrlTemplates(templates);
     }
 
     public BooleanProperty enableWebSearchProperty() {
@@ -226,8 +295,8 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
         return this.useCustomDOINameProperty;
     }
 
-    public ObservableList<StudyCatalogItem> getCatalogs() {
-        return catalogs;
+    public ObservableList<FetcherViewModel> getFetchers() {
+        return fetchers;
     }
 
     public BooleanProperty grobidEnabledProperty() {
@@ -236,14 +305,6 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
 
     public StringProperty grobidURLProperty() {
         return grobidURLProperty;
-    }
-
-    public ObservableList<FetcherApiKey> fetcherApiKeys() {
-        return apiKeys;
-    }
-
-    public ObjectProperty<FetcherApiKey> selectedApiKeyProperty() {
-        return selectedApiKeyProperty;
     }
 
     public BooleanProperty warnAboutDuplicatesOnImportProperty() {
@@ -255,7 +316,7 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
     }
 
     public BooleanProperty shouldKeepDownloadUrl() {
-        return shouldkeepDownloadUrl;
+        return shouldKeepDownloadUrl;
     }
 
     public ReadOnlyBooleanProperty apiKeyPersistAvailable() {
@@ -270,58 +331,87 @@ public class WebSearchTabViewModel implements PreferenceTabViewModel {
         return citationsRelationStoreTTL;
     }
 
-    public void checkCustomApiKey() {
-        final String apiKeyName = selectedApiKeyProperty.get().getName();
+    public ObservableList<SearchEngineItem> getSearchEngines() {
+        return searchEngines;
+    }
 
-        final Optional<CustomizableKeyFetcher> fetcherOpt =
-                WebFetchers.getCustomizableKeyFetchers(
-                                   preferences.getImportFormatPreferences(),
-                                   preferences.getImporterPreferences())
-                           .stream()
-                           .filter(fetcher -> fetcher.getName().equals(apiKeyName))
-                           .findFirst();
+    public void checkApiKey(FetcherViewModel fetcherViewModel, String apiKey, Consumer<Boolean> onFinished) {
+        Callable<Boolean> tester = () -> {
+            WebFetcher webFetcher = fetcherViewModel.getFetcher();
 
-        if (fetcherOpt.isEmpty()) {
-            dialogService.showErrorDialogAndWait(
-                    Localization.lang("Check %0 API Key Setting", apiKeyName),
-                    Localization.lang("Fetcher unknown!"));
-            return;
-        }
-
-        final String testUrlWithoutApiKey = fetcherOpt.get().getTestUrl();
-        if (testUrlWithoutApiKey == null) {
-            dialogService.showWarningDialogAndWait(
-                    Localization.lang("Check %0 API Key Setting", apiKeyName),
-                    Localization.lang("Fetcher cannot be tested!"));
-            return;
-        }
-
-        final String apiKey = selectedApiKeyProperty.get().getKey();
-
-        boolean keyValid;
-        if (!apiKey.isEmpty()) {
-            URLDownload urlDownload;
-            try {
-                urlDownload = new URLDownload(testUrlWithoutApiKey + apiKey);
-                // The HEAD request cannot be used because its response is not 200 (maybe 404 or 596...).
-                int statusCode = ((HttpURLConnection) urlDownload.getSource().openConnection()).getResponseCode();
-                keyValid = (statusCode >= 200) && (statusCode < 300);
-            } catch (IOException | UnirestException e) {
-                keyValid = false;
+            if (!(webFetcher instanceof CustomizableKeyFetcher fetcher)) {
+                return false;
             }
-        } else {
-            keyValid = false;
-        }
-
-        if (keyValid) {
-            dialogService.showInformationDialogAndWait(Localization.lang("Check %0 API Key Setting", apiKeyName), Localization.lang("Connection successful!"));
-        } else {
-            dialogService.showErrorDialogAndWait(Localization.lang("Check %0 API Key Setting", apiKeyName), Localization.lang("Connection failed!"));
-        }
+            return fetcher.isValidKey(apiKey);
+        };
+        BackgroundTask.wrap(tester)
+                      .onSuccess(onFinished)
+                      .onFailure(_ -> onFinished.accept(false))
+                      .executeWith(taskExecutor);
     }
 
     @Override
     public boolean validateSettings() {
-        return getCatalogs().stream().anyMatch(StudyCatalogItem::isEnabled);
+        return getFetchers().stream().anyMatch(FetcherViewModel::isEnabled);
+    }
+
+    public static class FetcherViewModel {
+        private final StringProperty name = new SimpleStringProperty();
+        private final BooleanProperty enabled = new SimpleBooleanProperty();
+        private final BooleanProperty customizable = new SimpleBooleanProperty();
+        private final StringProperty apiKey = new SimpleStringProperty("");
+        private final BooleanProperty useCustomApiKey = new SimpleBooleanProperty(false);
+        private final WebFetcher fetcher;
+
+        public FetcherViewModel(WebFetcher fetcher, boolean enabled, boolean customizable) {
+            this.name.set(fetcher.getName());
+            this.fetcher = fetcher;
+            this.enabled.set(enabled);
+            this.customizable.set(customizable);
+        }
+
+        public String getName() {
+            return name.get();
+        }
+
+        public StringProperty nameProperty() {
+            return name;
+        }
+
+        public boolean isEnabled() {
+            return enabled.get();
+        }
+
+        public BooleanProperty enabledProperty() {
+            return enabled;
+        }
+
+        public boolean isCustomizable() {
+            return customizable.get();
+        }
+
+        public BooleanProperty customizableProperty() {
+            return customizable;
+        }
+
+        public String getApiKey() {
+            return apiKey.get();
+        }
+
+        public StringProperty apiKeyProperty() {
+            return apiKey;
+        }
+
+        public boolean shouldUseCustomApiKey() {
+            return useCustomApiKey.get();
+        }
+
+        public BooleanProperty useCustomApiKeyProperty() {
+            return useCustomApiKey;
+        }
+
+        public WebFetcher getFetcher() {
+            return fetcher;
+        }
     }
 }
