@@ -4,14 +4,15 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.jabref.logic.FilePreferences;
 import org.jabref.logic.importer.util.FileFieldParser;
 import org.jabref.logic.l10n.Localization;
+import org.jabref.logic.util.strings.StringUtil;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.entry.LinkedFile;
-import org.jabref.model.strings.StringUtil;
+
+import org.jspecify.annotations.Nullable;
 
 public class FileChecker implements ValueChecker {
 
@@ -24,7 +25,7 @@ public class FileChecker implements ValueChecker {
     }
 
     @Override
-    public Optional<String> checkValue(String value) {
+    public Optional<String> checkValue(@Nullable String value) {
         if (StringUtil.isBlank(value)) {
             return Optional.empty();
         }
@@ -32,7 +33,7 @@ public class FileChecker implements ValueChecker {
         List<LinkedFile> linkedFiles = FileFieldParser
                 .parse(value).stream()
                 .filter(file -> !file.isOnlineLink())
-                .collect(Collectors.toList());
+                .toList();
 
         for (LinkedFile file : linkedFiles) {
             Optional<Path> linkedFile = file.findIn(context, filePreferences);
