@@ -1,12 +1,14 @@
 package org.jabref.logic.util.io;
 
+import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -19,8 +21,10 @@ import org.jabref.model.entry.LinkedFile;
 import org.jabref.model.entry.field.StandardField;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.DisabledOnOs;
+import org.junit.jupiter.api.condition.EnabledOnOs;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
@@ -39,7 +43,7 @@ import static org.mockito.Mockito.when;
 class FileUtilTest {
 
     @TempDir
-    static Path bibTempDir;
+    private static Path bibTempDir;
 
     private final Path nonExistingTestPath = Path.of("nonExistingTestPath");
     private Path existingTestFile;
@@ -54,11 +58,11 @@ class FileUtilTest {
 
         existingTestFile = subDir.resolve("existingTestFile.txt");
         Files.createFile(existingTestFile);
-        Files.write(existingTestFile, "existingTestFile.txt".getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
+        Files.writeString(existingTestFile, "existingTestFile.txt");
 
         otherExistingTestFile = subDir.resolve("otherExistingTestFile.txt");
         Files.createFile(otherExistingTestFile);
-        Files.write(otherExistingTestFile, "otherExistingTestFile.txt".getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
+        Files.writeString(otherExistingTestFile, "otherExistingTestFile.txt");
     }
 
     @Test
@@ -81,7 +85,7 @@ class FileUtilTest {
         entry.setField(StandardField.TITLE, "mytitle");
 
         assertEquals("1234 - mytitle",
-                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -92,7 +96,7 @@ class FileUtilTest {
         entry.setField(StandardField.TITLE, "mytitle");
 
         assertEquals("1234 - mytitle",
-                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -103,7 +107,7 @@ class FileUtilTest {
         entry.setField(StandardField.TITLE, "mytitle");
 
         assertEquals("1234",
-                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+                FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -113,7 +117,7 @@ class FileUtilTest {
         entry.setCitationKey("1234");
         entry.setField(StandardField.TITLE, "mytitle");
 
-        assertEquals("1234", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+        assertEquals("1234", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -122,7 +126,7 @@ class FileUtilTest {
         BibEntry entry = new BibEntry();
         entry.setField(StandardField.TITLE, "mytitle");
 
-        assertEquals("default", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+        assertEquals(Optional.empty(), FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
     }
 
     @Test
@@ -131,7 +135,7 @@ class FileUtilTest {
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
 
-        assertEquals("1234", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+        assertEquals("1234", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -139,7 +143,15 @@ class FileUtilTest {
         String fileNamePattern = "[title]";
         BibEntry entry = new BibEntry();
 
-        assertEquals("default", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+        assertEquals(Optional.empty(), FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+    }
+
+    @Test
+    void getLinkedFileNameGetOptionalEmptyIfDashAsPattern() {
+        String fileNamePattern = "-";
+        BibEntry entry = new BibEntry();
+
+        assertEquals(Optional.empty(), FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
     }
 
     @Test
@@ -150,7 +162,7 @@ class FileUtilTest {
         entry.setField(StandardField.YEAR, "1868");
         entry.setField(StandardField.PAGES, "567-579");
 
-        assertEquals("1868_Kitsune_567", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern));
+        assertEquals("1868_Kitsune_567", FileUtil.createFileNameFromPattern(null, entry, fileNamePattern).get());
     }
 
     @Test
@@ -160,78 +172,128 @@ class FileUtilTest {
                 .withCitationKey("BrayBuildingCommunity")
                 .withField(StandardField.TITLE, "Building \\mkbibquote{Community}");
         String expected = "BrayBuildingCommunity - Building Community";
-        String result = FileUtil.createFileNameFromPattern(null, entry, pattern);
-        assertEquals(expected, result);
+        Optional<String> result = FileUtil.createFileNameFromPattern(null, entry, pattern);
+        assertEquals(expected, result.get());
+    }
+
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+                pdf, test.pdf
+                pdf, te.st.pdf
+                PdF, te.st.PdF
+                pdf, 'test.pdf  '
+                PdF, 'test.PdF  '
+                PdF, 'te.st.PdF  '
+                txt, other.txt
+                pdf, path/test.pdf
+                pdf, path/.to/FileInsideAHiddenFolder.pdf
+            """)
+    void getFileExtension(String extension, String file) {
+        file = file.replace('/', File.separatorChar);
+        assertEquals(extension, FileUtil.getFileExtension(file).get());
+    }
+
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+                JustTextNotASingleDot
+                .StartsWithADotIsNotAnExtension
+                path/to/JustTextNotASingleDot
+                path/to/.StartsWithADotIsNotAnExtension
+                path/.to/FileInsideAHiddenFolder
+                path/.to/.StartsWithADotInsideAHiddenFolder
+            """)
+    void getAbsentFileExtension(String file) {
+        file = file.replace('/', File.separatorChar);
+        Optional<String> result = FileUtil.getFileExtension(file);
+        assertEquals(Optional.empty(), result);
+    }
+
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+                te.st, 'te.st.PdF  '
+                te.st, 'path/to/te.st.PdF  '
+                test, test.pdf
+                other, 'other.txt'
+                file, path/to/file.pdf
+                JustTextNotASingleDot, JustTextNotASingleDot
+                .StartsWithADotIsNotAnExtension, .StartsWithADotIsNotAnExtension
+                JustTextNotASingleDot, path/to/JustTextNotASingleDot
+                .StartsWithADotIsNotAnExtension, path/to/.StartsWithADotIsNotAnExtension
+                FileInsideAHiddenFolder, path/.to/FileInsideAHiddenFolder
+                .StartsWithADotInsideAHiddenFolder, path/.to/.StartsWithADotInsideAHiddenFolder
+            """)
+    void getBaseName(String baseName, String file) {
+        file = file.replace('/', File.separatorChar);
+        assertEquals(baseName, FileUtil.getBaseName(file));
+    }
+
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+                test.pdf
+                other.txt
+                path/test.pdf
+                path/to/file.pdf
+                JustTextNotASingleDot
+                .StartsWithADotIsNotAnExtension
+                path/to/JustTextNotASingleDot
+                path/to/.StartsWithADotIsNotAnExtension
+                path/.to/FileInsideAHiddenFolder
+                path/.to/.StartsWithADotInsideAHiddenFolder
+            """)
+    void fileExtensionAreTheSameForStringsAndPaths(String file) {
+        file = file.replace('/', File.separatorChar);
+        Optional<String> resultFromString = FileUtil.getFileExtension(file);
+        Optional<String> resultFromPath = FileUtil.getFileExtension(Path.of(file));
+        assertEquals(resultFromString, resultFromPath);
+    }
+
+    @ParameterizedTest
+    @CsvSource(textBlock = """
+            test.file, www.example.com/test.file
+            test.file, http://www.example.com/test.file
+            test.file, https://www.example.com/test.file
+            test.file, www.example.com/path/to/test.file
+            test.file, http://www.example.com/path/to/test.file
+            test.file, https://www.example.com/path/to/test.file
+            test.file, https://www.example.com/not%5Ca%5Cwindows%5Cpath/test.file
+            # Linux: test.file, https://www.example.com////test.file
+            # Windows: ____test.file, https://www.example.com////test.file
+            blank, https://www.example.com/path/to/blank
+            blank, https://www.example.com/not%5Ca%5Cwindows%5Cpath/blank
+            # Windows: last part is not\\a\\windows.file
+            # Windows: windows.file, https://www.example.com/path/to/not%5Ca%5Cwindows.file
+            test.file, https://www.example.com/path/to/test.file?field=value
+            test.file, https://www.example.com/path/to/test.file?a=1&b=2
+            test.file, https://www.example.com/path/to/test.file?search=for+a+file
+            blank, https://www.example.com/path/to/blank?search=for+a+file
+            """)
+    void getFileNameFromUrlsCorrectly(String file, String url) {
+        assertEquals(Optional.of(file), FileUtil.getFileNameFromUrl(url));
     }
 
     @Test
-    void getFileExtensionSimpleFile() {
-        assertEquals("pdf", FileUtil.getFileExtension(Path.of("test.pdf")).get());
+    void getLastPathFragmentAsNameFallback() {
+        assertEquals(Optional.of("to"), FileUtil.getFileNameFromUrl("https://www.example.com/path/to/?nothing=at+all"), "from 'https://www.example.com/path/to/?nothing=at+all'");
     }
 
     @Test
-    void getFileExtensionMultipleDotsFile() {
-        assertEquals("pdf", FileUtil.getFileExtension(Path.of("te.st.PdF")).get());
-    }
-
-    @Test
-    void getFileExtensionNoExtensionFile() {
-        assertFalse(FileUtil.getFileExtension(Path.of("JustTextNotASingleDot")).isPresent());
-    }
-
-    @Test
-    void getFileExtensionNoExtension2File() {
-        assertFalse(FileUtil.getFileExtension(Path.of(".StartsWithADotIsNotAnExtension")).isPresent());
-    }
-
-    @Test
-    void getFileExtensionWithSimpleString() {
-        assertEquals("pdf", FileUtil.getFileExtension("test.pdf").get());
-    }
-
-    @Test
-    void getFileExtensionTrimsAndReturnsInLowercase() {
-        assertEquals("pdf", FileUtil.getFileExtension("test.PdF  ").get());
-    }
-
-    @Test
-    void getFileExtensionWithMultipleDotsString() {
-        assertEquals("pdf", FileUtil.getFileExtension("te.st.PdF  ").get());
-    }
-
-    @Test
-    void getFileExtensionWithNoDotReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileUtil.getFileExtension("JustTextNotASingleDot"));
-    }
-
-    @Test
-    void getFileExtensionWithDotAtStartReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileUtil.getFileExtension(".StartsWithADotIsNotAnExtension"));
-    }
-
-    @Test
-    void getFileNameWithSimpleString() {
-        assertEquals("test", FileUtil.getBaseName("test.pdf"));
-    }
-
-    @Test
-    void getFileNameWithMultipleDotsString() {
-        assertEquals("te.st", FileUtil.getBaseName("te.st.PdF  "));
+    void getEmptyFileNameFromEmptyUrlCorrectly() {
+        assertEquals(Optional.empty(), FileUtil.getFileNameFromUrl(""), "from ''");
     }
 
     @Test
     @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Assumed path separator is /")
     void uniquePathSubstrings() {
-       List<String> paths = List.of("C:/uniquefile.bib",
-               "C:/downloads/filename.bib",
-               "C:/mypaper/bib/filename.bib",
-               "C:/external/mypaper/bib/filename.bib",
-               "");
+        List<String> paths = List.of("C:/uniquefile.bib",
+                "C:/downloads/filename.bib",
+                "C:/mypaper/bib/filename.bib",
+                "C:/external/mypaper/bib/filename.bib",
+                "");
         List<String> uniqPath = List.of("uniquefile.bib",
-              "downloads/filename.bib",
-              "C:/mypaper/bib/filename.bib",
-              "external/mypaper/bib/filename.bib",
-              "");
+                "downloads/filename.bib",
+                "C:/mypaper/bib/filename.bib",
+                "external/mypaper/bib/filename.bib",
+                "");
 
         List<String> result = FileUtil.uniquePathSubstrings(paths);
         assertEquals(uniqPath, result);
@@ -371,6 +433,34 @@ class FileUtilTest {
     }
 
     @Test
+    void isShortcutFileReturnsTrueForPathEndingInLnk() {
+        assertTrue(FileUtil.isShortcutFile(Path.of("test.lnk")));
+    }
+
+    @Test
+    void isShortcutFileReturnsTrueForPathEndingInLnkCaseInsensitive() {
+        assertTrue(FileUtil.isShortcutFile(Path.of("test.LNK")));
+    }
+
+    @Test
+    void isShortcutFileReturnsFalseForPathEndingInBib() {
+        assertFalse(FileUtil.isShortcutFile(Path.of("test.bib")));
+    }
+
+    @Test
+    void resolveIfShortcutReturnsOriginalPathWhenFileIsNotShortcut() {
+        Path path = Path.of("test.bib");
+        assertEquals(path, FileUtil.resolveIfShortcut(path));
+    }
+
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Shortcut resolution only supported on Windows")
+    void resolveIfShortcutReturnsOriginalPathOnNonWindowsOs() {
+        Path path = Path.of("test.lnk");
+        assertEquals(path, FileUtil.resolveIfShortcut(path));
+    }
+
+    @Test
     void findInPath() {
         Optional<Path> resultPath1 = FileUtil.findSingleFileRecursively("existingTestFile.txt", rootDir);
         assertEquals(resultPath1.get().toString(), existingTestFile.toString());
@@ -386,12 +476,13 @@ class FileUtilTest {
     }
 
     @Test
-    void extractFileExtension() {
-        final String filePath = FileUtilTest.class.getResource("pdffile.pdf").getPath();
+    void extractFileExtension() throws URISyntaxException {
+        final Path filePath = Path.of(FileUtilTest.class.getResource("pdffile.pdf").toURI());
         assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
     }
 
     @Test
+    @Disabled("Not possible as URL is not a path. One needs to use FileUtil.getFileNameFromUrl")
     void fileExtensionFromUrl() {
         final String filePath = "https://link.springer.com/content/pdf/10.1007%2Fs40955-018-0121-9.pdf";
         assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
@@ -448,9 +539,89 @@ class FileUtilTest {
         }
     }
 
-    /**
-     * @implNote Tests inspired by {@link org.jabref.model.database.BibDatabaseContextTest#getFileDirectoriesWithRelativeMetadata}
-     */
+    /// Tests for issue <https://github.com/JabRef/jabref/issues/12995>
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Symlink behavior unreliable on windows")
+    void simpleRelativizeSymlinks() throws IOException {
+        Path realDir = bibTempDir.resolve("realDir_" + UUID.randomUUID());
+        Files.createDirectories(realDir);
+
+        Path simpleFile = Files.createFile(realDir.resolve("simple.pdf"));
+        Path symlinkDir = bibTempDir.resolve("symlinkDir_" + UUID.randomUUID());
+        Files.createSymbolicLink(symlinkDir, realDir);
+
+        Path result = FileUtil.relativize(simpleFile, List.of(symlinkDir));
+        assertEquals(Path.of("simple.pdf"), result, "Simple symlink resolves to relative");
+    }
+
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Symlink behavior unreliable on windows")
+    void chainedRelativizeSymlinks() throws IOException {
+        Path chainReal = bibTempDir.resolve("chainReal_" + UUID.randomUUID());
+        Files.createDirectories(chainReal);
+
+        Path chainedFile = Files.createFile(chainReal.resolve("chained.pdf"));
+        Path chainLink2 = bibTempDir.resolve("chainLink2_" + UUID.randomUUID());
+        Files.createSymbolicLink(chainLink2, chainReal);
+        Path chainLink1 = bibTempDir.resolve("chainLink1_" + UUID.randomUUID());
+        Files.createSymbolicLink(chainLink1, chainLink2);
+
+        Path result = FileUtil.relativize(chainedFile, List.of(chainLink1));
+        assertEquals(Path.of("chained.pdf"), result, "Chained symlink resolves to relative");
+    }
+
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Symlink behavior unreliable on windows")
+    void nestedRelativizeSymlinks() throws IOException {
+        Path realDir = bibTempDir.resolve("realDir_" + UUID.randomUUID());
+        Files.createDirectories(realDir);
+
+        Path nestedDir = realDir.resolve("nested_" + UUID.randomUUID());
+        Files.createDirectories(nestedDir);
+        Path nestedFile = Files.createFile(nestedDir.resolve("nested.pdf"));
+        Path nestedSymlink = realDir.resolve("nestedLink_" + UUID.randomUUID());
+        Files.createSymbolicLink(nestedSymlink, nestedDir);
+
+        Path result = FileUtil.relativize(nestedFile, List.of(nestedSymlink));
+        assertEquals(Path.of("nested.pdf"), result, "Nested symlink resolves to relative");
+    }
+
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Symlink behavior unreliable on windows")
+    void unrelatedFileRemainsAbsolute() throws IOException {
+        Path realDir = bibTempDir.resolve("realDir_" + UUID.randomUUID());
+        Files.createDirectories(realDir);
+        Path symlinkDir = bibTempDir.resolve("symlinkDir_" + UUID.randomUUID());
+        Files.createSymbolicLink(symlinkDir, realDir);
+
+        Path outsideFile = Files.createFile(bibTempDir.resolve("outside.pdf"));
+
+        Path result = FileUtil.relativize(outsideFile, List.of(symlinkDir));
+        assertEquals(outsideFile, result, "Unrelated file remains absolute");
+    }
+
+    @Test
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Symlink behavior unreliable on windows")
+    void symlinkEscapeCaseIgnored() throws IOException {
+        Path veryPrivate = bibTempDir.resolve("veryprivate");
+        Files.createDirectories(veryPrivate);
+        Path secretFile = Files.createFile(veryPrivate.resolve("a.pdf"));
+
+        Path expensive = bibTempDir.resolve("expensive");
+        Files.createSymbolicLink(expensive, veryPrivate);
+        Path things = bibTempDir.resolve("things");
+        Files.createSymbolicLink(things, expensive);
+
+        Path libDir = bibTempDir.resolve("lib");
+        Files.createDirectories(libDir);
+        Files.createFile(libDir.resolve("bib.bib"));
+
+        org.junit.jupiter.api.Assumptions.assumeTrue(false, "IGNORED: Symlink chain escaping base dir, see <https://github.com/JabRef/jabref/issues/12995#issuecomment-3065149862>");
+        Path result = FileUtil.relativize(secretFile, List.of(things));
+        assertEquals(secretFile, result);
+    }
+
+    /// @implNote Tests inspired by {@link org.jabref.model.database.BibDatabaseContextTest#getFileDirectoriesWithRelativeMetadata}
     public static Stream<Arguments> relativize() {
         Path bibPath = bibTempDir.resolve("bibliography.bib");
         Path filesPath = bibTempDir.resolve("files").resolve("pdfs");
@@ -517,5 +688,21 @@ class FileUtilTest {
     })
     void shortenFileName(String expected, String fileName, Integer maxLength) {
         assertEquals(expected, FileUtil.shortenFileName(fileName, maxLength));
+    }
+
+    @EnabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS)
+    @ParameterizedTest
+    @ValueSource(strings = {"/c/Users/username/Downloads/test.bib",
+            "/cygdrive/c/Users/username/Downloads/test.bib",
+            "/mnt/c/Users/username/Downloads/test.bib"})
+    void convertCygwinPathToWindowsShouldConvertToWindowsFormatWhenRunningOnWindows(String filePath) {
+        assertEquals(Path.of("C:\\\\Users\\\\username\\\\Downloads\\\\test.bib"), FileUtil.convertCygwinPathToWindows(filePath));
+    }
+
+    @DisabledOnOs(value = org.junit.jupiter.api.condition.OS.WINDOWS, disabledReason = "Test in others operational systems")
+    @ParameterizedTest
+    @ValueSource(strings = {"/home/username/Downloads/test.bib"})
+    void convertCygwinPathToWindowsShouldReturnOriginalFilePathWhenRunningOnWindows(String filePath) {
+        assertEquals(Path.of(filePath), FileUtil.convertCygwinPathToWindows(filePath));
     }
 }
